# miniWeather

./: CMakeLists.txt  INTERVIEW_PREP.md  PROJECT_ANALYSIS.md  README.md  README_STUDY.md  docker-compose.yml  miniWeather_mpi.cpp  miniWeather_mpi.cpp.bak  miniWeather_mpi_openmp.cpp  miniWeather_serial.cpp  miniWeather_serial.cpp.bak
fortran/: miniWeather_mpi.F90  miniWeather_mpi_do_concurrent.F90  miniWeather_mpi_openacc.F90  miniWeather_mpi_openmp.F90  miniWeather_mpi_openmp45.F90  miniWeather_serial.F90
